--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -28,6 +28,18 @@ const navItems: Array<NavItem> = [
     }
   </ul>
 
+   <!-- Search form -->
+   <form action="/search" method="GET" class="navbar-search-form">
+    <input type="text" name="q" placeholder="Search..." class="navbar-search-input" />
+      <button type="submit" class="navbar-search-button">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="#808080" width="20" height="20">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+      </svg>
+      
+    </button>
+  </form>
+  
+
   <div class="filler"></div>
 
 </nav>
